<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/imagenlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fl_header_image">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagen"
            android:scaleType="fitXY"
            android:src="@drawable/fondo" />

        <ImageView
            android:layout_width="@dimen/logotamaño"
            android:layout_height="@dimen/logotmñ"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
             />

    </FrameLayout>
    <com.palma.apps.graziapp.utils.MSPTextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:layout_marginTop="35dp"
        android:text="@string/titulo_login"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/lbl18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_header_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MSPTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.palma.apps.graziapp.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/tm16"
            android:textSize="@dimen/tm16"
            android:textColor="@color/colorPrimaryText"
            tools:text="abc@gmail.com"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MSPTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_password"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.palma.apps.graziapp.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:padding="@dimen/tm16"
            android:textSize="@dimen/tm16"
            android:textColor="@color/colorPrimaryText"
            tools:text="1234546"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.palma.apps.graziapp.utils.MSPTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forgot_password"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/tm5"
        android:text="@string/lbl_forgot_password"
        android:textSize="@dimen/lbl14"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:layout_marginRight="16dp"
        tools:ignore="UnusedAttribute" />

    <com.palma.apps.graziapp.utils.MSPButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:paddingTop="@dimen/tmñpadding"
        android:foreground="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/tmñpadding"
        android:text="@string/btn_lbl_login"
        tools:targetApi="m"
        tools:ignore="UnusedAttribute"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/lbl18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <com.palma.apps.graziapp.utils.MSPTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1.5dp"
            android:padding="@dimen/tm5"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/tm16"/>

        <com.palma.apps.graziapp.utils.MSPTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_register"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1.5dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/tm5"
            android:text="@string/txtRegistrarse"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/tm16"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>