<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.OlvidoContraseniaActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/imagenlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/fl_header_image">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imagen"
            android:scaleType="fitXY"
            android:src="@drawable/fondo"/>
        <ImageView
            android:layout_width="@dimen/auth_logo_height_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:contentDescription="@string/imagen" />
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:id="@+id/toolbar_forgot_password_activity"/>

    </FrameLayout>

    <com.palma.apps.graziapp.utils.MSPTextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:layout_marginTop="35dp"
        android:text="@string/txtOlvidePwd"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image"/>

    <com.palma.apps.graziapp.utils.MSPTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title_description"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/OlvidePwdDescrip"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_description_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MSPTextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/txt_email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_description">

        <com.palma.apps.graziapp.utils.MSPEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textSize="@dimen/et_textSize"
            android:textColor="@color/colorPrimaryText"
            tools:text="abc@gmail.com"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.palma.apps.graziapp.utils.MSPButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:text="ENVIAR"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        tools:ignore="UnusedAttribute" />



</androidx.constraintlayout.widget.ConstraintLayout>